--- a/.config/hypr/bindings/tiling.conf
+++ b/.config/hypr/bindings/tiling.conf
@@ -5,50 +5,40 @@ $mainMod = ALT
 $shiftMod = SHIFT_ALT
 $shiftWinMod = SHIFT_SUPER
 $ctrlMod = CTRL_ALT
-$notice = notify-send
 
 bind = $mainMod, F, exec, killall -SIGUSR1 waybar
 bind = $mainMod, Z, Fullscreen
-bind = $ctrlMod, Return, exec, $terminal
-bind = $shiftMod, Return, exec, $terminal -e tmux new-session -A -s 0
+bind = $shiftMod, Return, exec, $terminal
+bind = $ctrlMod, Return, exec, $terminal -e tmux new-session -A -s 0
 bind = $shiftMod, Q, killactive,
 bind = $mainMod, D, exec, uwsm app -- $(rofi -show drun -config ~/.config/rofi/rofidmenu.rasi)
 
 
 
 # Resize
-bind = $shiftMod, R, exec,  $notice "Resize mode: Use HJKL/Arrow keys to resize"
 bind = $shiftMod, R, submap, resize
 
 # Submap for resize mode
 submap = resize
-    bind = , j, exec, hyprctl dispatch resizeactive -100 0
-    bind = , h, exec, hyprctl dispatch resizeactive 0 100
-    bind = , l, exec, hyprctl dispatch resizeactive 0 -100
-    bind = , k, exec, hyprctl dispatch resizeactive 100 0
-    bind = , r, exec, hyprctl dispatch centerwindow
-    # Exit resize mode
-    bind = , escape, exec, hyprctl dismissnotify
-    bind = , escape, submap, reset
+bind = , j, exec, hyprctl dispatch resizeactive -100 0
+bind = , h, exec, hyprctl dispatch resizeactive 0 100
+bind = , l, exec, hyprctl dispatch resizeactive 0 -100
+bind = , k, exec, hyprctl dispatch resizeactive 100 0
+bind = , r, exec, hyprctl dispatch centerwindow
+bind = , escape, submap, reset
 submap = reset
 
 # Exit
-bind = $shiftMod, E, exec, $notice "Exit Menu : [L]ogout  [R]eboot  [S]uspend  [H]ibernate  [P]oweroff"
 bind = $shiftMod, E, submap, exit
 
 # Exit submap (like i3's mode)
 submap = exit
-    # Exit options (like i3's bindsym in exit mode)
-    bind = , L, exec, hyprctl dispatch exit  # Logout
-    bind = , R, exec, systemctl reboot       # Reboot
-    bind = , S, exec, systemctl suspend      # Suspend
-    bind = , H, exec, systemctl hibernate    # Hibernate
-    bind = , P, exec, systemctl poweroff     # Poweroff
-
-    # Cancel/Exit mode (like Escape/Return in i3)
-    bind = , escape, exec, hyprctl dismissnotify
-    bind = , escape, submap, reset           # Escape cancels
-
+bind = , L, exec, hyprctl dispatch exit  # Logout
+bind = , R, exec, systemctl reboot       # Reboot
+bind = , S, exec, systemctl suspend      # Suspend
+bind = , H, exec, systemctl hibernate    # Hibernate
+bind = , P, exec, systemctl poweroff     # Poweroff
+bind = , escape, submap, reset
 submap = reset
 
 # Focus movement
