--- a/.config/hypr/general/looknfeel.conf
+++ b/.config/hypr/general/looknfeel.conf
@@ -19,52 +19,53 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
     shadow {
-        enabled = false
+      enabled = false
     }
 
     blur {
-        enabled = false
+      enabled = false
     }
 }
 
 animations {
-    enabled = false
+   enabled = false
 }
 
 
 master {
-    new_status = master
+   new_status = master
 }
 
 plugin {
     hy3 {
-        tabs {
-			height = 18
-            padding = 0
-            radius = 0
-            border_width = 0
-            text_height = 12
-            col.active = rgba(213, 196, 161, 1)
-            col.active.border = rgba(213, 196, 161, 1)
-            col.active.text = rgba(101, 71, 53, 1)
-            col.inactive = rgba(242,229,188,1)
-            col.inactive.border = rgba(242,229,188,1)
-            col.inactive.text = rgba(101, 71, 53, 1)
-            col.urgent = rgba(193,74,74,1)
-            col.urgent.border = rgba(193,74,74,1)
-            col.urgent.text = rgba(101, 71, 53, 1)
-        }
+      no_gaps_when_only  = 1
+      tabs {
+				height = 18
+        padding = 0
+        radius = 0
+        border_width = 0
+        text_height = 12
+        col.active = rgba(213, 196, 161, 1)
+        col.active.border = rgba(213, 196, 161, 1)
+        col.active.text = rgba(101, 71, 53, 1)
+        col.inactive = rgba(242,229,188,1)
+        col.inactive.border = rgba(242,229,188,1)
+        col.inactive.text = rgba(101, 71, 53, 1)
+        col.urgent = rgba(193,74,74,1)
+        col.urgent.border = rgba(193,74,74,1)
+        col.urgent.text = rgba(101, 71, 53, 1)
+      }
 
         autotile {
-            enable = false
+          enable = false
         }
     }
 }
 
 
 misc {
-	background_color= rgba(0,0,0,0)
-    force_default_wallpaper = 1
-    disable_hyprland_logo = true
+	background_color= rgba(20, 22, 23, 1)
+  force_default_wallpaper = 1
+  disable_hyprland_logo = true
 	vfr = true
 }
