--- a/.config/hypr/apps/browser.conf
+++ b/.config/hypr/apps/browser.conf
@@ -1,6 +1,6 @@
 # Browser types
-windowrule = tag +chromium-based-browser, class:((google-)?[cC]hrom(e|ium)|[bB]rave-browser|[mM]icrosoft-edge|Vivaldi-stable|helium)
-windowrule = tag +firefox-based-browser, class:([fF]irefox|zen|librewolf)
+windowrule = tag +chromium-based-browser, match:class ((google-)?[cC]hrom(e|ium)|[bB]rave-browser|[mM]icrosoft-edge|Vivaldi-stable|helium)
+windowrule = tag +firefox-based-browser, match:class ([fF]irefox|zen|librewolf)
 
 # Force chromium-based browsers into a tile to deal with --app bug
-windowrule = tile, tag:chromium-based-browser
+windowrule = tile on, match:tag chromium-based-browser
