--- a/.config/hypr/general/input.conf
+++ b/.config/hypr/general/input.conf
@@ -4,10 +4,12 @@ input {
     kb_model =
     kb_rules =
     follow_mouse = 1
-    sensitivity = 0
+    sensitivity = 0.50
 
     touchpad {
-        natural_scroll = false
+      natural_scroll = false
+      clickfinger_behavior = true
+      scroll_factor = 2.5
     }
 }
 
