--- a/.config/hypr/general/windows.conf
+++ b/.config/hypr/general/windows.conf
@@ -1,5 +1,9 @@
-windowrule = suppressevent maximize, class:.*
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# Hyprland 0.53+ syntax
+windowrule = suppress_event maximize, match:class .*
+
+# Fix some dragging issues with XWayland
+windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, match:float 1, match:fullscreen 0, match:pin 0
 
 source = ~/.config/hypr/apps/jetbrains.conf
 source = ~/.config/hypr/apps/browser.conf
