--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,17 +6,15 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g prefix C-t
 set -g base-index 1
-set -g renumber-windows on
 set -g mode-keys vi
-set -g status-style "bg=#eddeb5"
+set -g mouse on
+set -g renumber-windows on
+set -g aggressive-resize on
 set -g status-left "#S "
 set -g status-right ""
-set -g window-status-current-style "fg=black bold, bg=#d7d9ae"
-set -g mouse on
-setw -g aggressive-resize on
+set -g status-style "bg=default"
+set -g window-status-current-style "fg=black bold, bg=blue"
 
-bind g run-shell "tmux new-window -c '#{pane_current_path}' -n 'lazygit' lazygit"
-bind d run-shell "tmux new-window -c '#{pane_current_path}' -n 'lazydocker' lazydocker"
 
 bind-key n new-window -c "#{pane_current_path}"
 bind-key j previous-window
@@ -30,6 +28,6 @@ bind-key H select-pane -L
 bind-key J select-pane -D
 bind-key K select-pane -U
 bind-key L select-pane -R
-bind-key x kill-window
-bind-key X kill-pane
+bind-key X kill-window
+bind-key x kill-pane
 bind-key o choose-session
